--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a very small underscore, for browser apps that like to watch their weight",
   "main": "index.js",
   "scripts": {
+    "version": "node tools/make.js && git add index.js readme.md",
     "test": "mocha"
   },
   "repository": {
