--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/featurist/lowscore#readme",
   "devDependencies": {
+    "chai": "3.5.0",
     "fs-promise": "0.5.0",
+    "mocha": "2.4.5",
     "mustache": "2.2.1",
     "uglify-js": "2.6.2"
   }
