--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-promise": "0.5.0",
     "mocha": "2.4.5",
     "mustache": "2.2.1",
-    "uglify-js": "2.6.2"
+    "uglify-js": "2.6.2",
+    "underscore": "1.8.3"
   }
 }
