--- a/package.json
+++ b/package.json
@@ -23,10 +23,32 @@
   },
   "homepage": "https://github.com/featurist/lowscore#readme",
   "devDependencies": {
+    "browserify": "14.3.0",
+    "bytes": "2.5.0",
     "chai": "3.5.0",
     "fs-promise": "0.5.0",
+    "lodash": "4.17.4",
+    "lodash.assign": "4.2.0",
+    "lodash.compact": "3.0.1",
+    "lodash.find": "4.6.0",
+    "lodash.findindex": "4.6.0",
+    "lodash.flatten": "4.4.0",
+    "lodash.frompairs": "4.0.1",
+    "lodash.groupby": "4.6.0",
+    "lodash.indexby": "3.1.1",
+    "lodash.mapvalues": "4.6.0",
+    "lodash.omit": "4.5.0",
+    "lodash.pick": "4.4.0",
+    "lodash.range": "3.2.0",
+    "lodash.sortby": "4.7.0",
+    "lodash.times": "4.3.2",
+    "lodash.uniq": "4.5.0",
+    "lodash.values": "4.3.0",
+    "lodash.without": "4.4.0",
+    "lodash.zip": "4.2.0",
     "mocha": "2.4.5",
     "mustache": "2.2.1",
+    "stream-to-string": "1.1.0",
     "uglify-js": "2.6.2",
     "underscore": "1.8.3"
   }
